SWIG (Simplified Wrapper and Interface Generator)

The Guile/MzScheme Support Patch for 1.3a5
==========================================

5/21/2001: mkoeppe
	   [Guile] New linkage "module" for creating Guile modules for
	   Guile versions >= 1.5.0. 

4/18/2001: mkoeppe
	   [MzScheme] Added typemaps for passing through Scheme_Object
	   pointers. 

4/9/2001 : mkoeppe 
	   [MzScheme] Added typemaps for `bool'.  Inclusion of headers
	   and support routines is now data-driven via mzscheme.i.
	   Headers come from the new file mzschemdec.swg.  Don't abort
	   immediately when a type-handling error is reported.  When
	   searching for typemaps for enums, fall back to using int,
	   like the Guile backend does.  Support char constants.  Emit
	   correct wrapper code for variables.

3/12/2001: mkoeppe
	   [Guile] Fixed typemaps for char **OUTPUT, char **BOTH.

3/2/2001 : mkoeppe 
	   [Guile] Every wrapper function now gets a boolean variable
	   gswig_list_p which indicates whether multiple values are
	   present. The macros GUILE_APPEND_RESULT, GUILE_MAYBE_VALUES
	   and GUILE_MAYBE_VECTOR use this variable, rather than
	   checking whether the current return value is a list. This
	   allows for typemaps returning a list as a single value (a
	   list was erroneously converted into a vector or a
	   multiple-value object in this case).

3/1/2001 : mkoeppe
	   [Guile] Added support for returning multiple values as
	   vectors, or passing them to a muliple-value
	   continuation. By default, multiple values still get
	   returned as a list.

3/1/2001 : mkoeppe
	   [Guile] Added a "beforereturn" pragma. The value of this
	   pragma is inserted just before every return statement.

3/1/2001 : mkoeppe
	   [Guile] Added support for Guile 1.4.1 procedure
	   documentation formats, see internals.html.

2/26/2001: mkoeppe
	   [Guile] Made the wrapper code compile with C++ if the
	   "-c++" command-line switch is given.  Thanks to
	   <monkeyiq@dingoblue.net.au>. 
